Revert "Update _site.yml"
This reverts commit 43c899bcc33aa8fd57cfeeb26998af48529634b7.

--- a/_site.yml
+++ b/_site.yml
@@ -7,5 +7,5 @@ navbar:
     - text: "CRIM250 Assignment"
       href: CRIM250-Assignment.html
     - text: "Crim250 Final Project"
-      href: Crim250-Final-Project.html
+      href: Crim250 Final Project.html
 output_dir: "docs"
