--- a/_site.yml
+++ b/_site.yml
@@ -6,6 +6,6 @@ navbar:
       href: index.html
     - text: "CRIM250 Assignment"
       href: CRIM250-Assignment.html
-   - text: "Crim250-Final-Project"
-      href: Crim250-Final-Project.html
+    - text: "CRIM250 Final Project"
+      href: CRIM250-Final-Project.html
 output_dir: "docs"
